--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React workflow",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --progress --colors",
+    "start": "webpack-dev-server --progress --colors --history-api-fallback",
     "production": "webpack -p",
     "build": "webpack --watch --colors"
   },
