--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.24.1",
+    "material-ui": "^0.16.4",
     "node-sass": "^3.11.1",
+    "react-tap-event-plugin": "^2.0.1",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.3",
