--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Andres Barradas",
   "license": "ISC",
   "dependencies": {
+    "fetch": "^1.1.0",
     "immutability-helper": "^2.0.0",
     "react": "^15.4.0",
     "react-addons-css-transition-group": "^15.4.0",
