--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   "dependencies": {
     "fetch": "^1.1.0",
     "immutability-helper": "^2.0.0",
-    "react": "^15.4.0",
-    "react-addons-css-transition-group": "^15.4.0",
-    "react-dom": "^15.4.0",
+    "react": "^15.3.2",
+    "react-addons-css-transition-group": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "react-paginate": "^2.2.3",
     "react-router": "^3.0.0",
     "react-toolbox": "^1.2.5"
   },
@@ -34,6 +35,7 @@
     "html-webpack-plugin": "^2.24.1",
     "material-ui": "^0.16.4",
     "node-sass": "^3.11.1",
+    "react-dom": "^15.4.1",
     "react-tap-event-plugin": "^2.0.1",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
