--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
   "author": "Andres Barradas",
   "license": "ISC",
   "dependencies": {
+    "babel-loader": "^6.2.8",
     "fetch": "^1.1.0",
     "immutability-helper": "^2.0.0",
-    "react": "^15.3.2",
-    "react-addons-css-transition-group": "^15.3.2",
-    "react-dom": "^15.3.2",
+    "react": "^15.4.1",
+    "react-addons-create-fragment": "~15.3.2",
+    "react-addons-css-transition-group": "~15.3.2",
+    "react-addons-update": "~15.3.2",
+    "react-dom": "^15.4.1",
     "react-paginate": "^2.2.3",
     "react-router": "^3.0.0",
+    "react-tap-event-plugin": "^2.0.1",
     "react-toolbox": "^1.2.5"
   },
   "devDependencies": {
@@ -35,8 +39,6 @@
     "html-webpack-plugin": "^2.24.1",
     "material-ui": "^0.16.4",
     "node-sass": "^3.11.1",
-    "react-dom": "^15.4.1",
-    "react-tap-event-plugin": "^2.0.1",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.3",
