--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.24.1",
+    "marvel-characters": "^1.0.3",
     "material-ui": "^0.16.4",
     "node-sass": "^3.11.1",
     "sass-loader": "^4.0.2",
