--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "React workflow",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --progress --colors --history-api-fallback",
+    "start": "node server.js",
+    "serve": "webpack-dev-server --progress --colors --history-api-fallback",
     "production": "webpack -p",
     "build": "webpack --watch --colors"
   },
@@ -16,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-loader": "^6.2.8",
+    "express": "^4.14.0",
     "fetch": "^1.1.0",
     "immutability-helper": "^2.0.0",
     "react": "^15.4.1",
